    reloaded so if you add or remove some module then you have to restart
    your application.

* Created interfaces for loadable modules:
    - vfs (virtual file system)
    - gtkFileProp (GTK file properties dialog extension)
    - gtkFolderCol (FmFolderModel custom column)
    - gtkMenuScheme (GTK context menu extension for URI scheme)

* Moved all VFS into loadable modules.

* Moved desktop entry file properties extension into loadable module.

* Rewritten context menu creation with loadable modules. Moved "actions"
    into separate module.

* Customized Trash Can context menus with separate module.

* Added test if the directory is read-only and update context menus
    appropriately.


Changes on 1.1.0 since 1.0.1:

* Added 'no_usb_trash' option into config file, defaulted to 0, which
    defines whether skip trashing files on removable media or not. If
    defined to skip then files will go into "trash-unsupported" and user
    will be asked by fm_file_ops_job_run_with_progress() to remove them
    instead.

* Added 'no_child_non_expandable' option into config file, defaulted to
    0, which adds feature to hide expanders on non-expandable rows so no
    extra 'No Sub Folder' rows are shown. No automation on that is done
    still since it may be expensive sometimes.

* Corrected underscores (mnemonics) on every menu and dialog.

* Fixed GTK+ 3.0 compatibility problems. Libfm can be compiled with Gtk
    2.18 ... 3.x and Glib 2.22+ currently (if glib < 2.26 or vala < 0.13
    still requires run configure --disable-actions). Added new switch to
    configure script --with-gtk=N where N is GTK+ generation to be used,
    may be either 2 or 3. Default is 2.

* Enabled option to Unmount removable media without ejecting it.

* Migrated menu:// support into built-in VFS. There will be support for
    menu editing functions later.

* Added search engine. Supports search:// URIs and has the UI represented
    by API fm_launch_search_simple().
